--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +16,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#skill">Skill</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </div>
     </div>
@@ -32,7 +33,8 @@
         </div>       
     </div>
 
-    <div class="mx-20 mt-40 text-emerald-100 " id="skill">
+    <div id="skill"></div>
+    <div class="mx-20 mt-40 text-emerald-100 " >
         <p class="text-3xl text-center font-bold ">SKILLS</p>
         <div class="text-lg flex m-16">
             
@@ -50,7 +52,9 @@
         </div>
     </div>
 
-    <div class="mx-20 mt-52 text-emerald-100" id="about">
+
+    <div id="about"></div>
+    <div class="mx-20 mt-52 text-emerald-100" >
         <p class="uppercase text-3xl text-center font-bold ">About Me</p>
         
        <div class="flex mt-20 gap-20">
@@ -63,7 +67,9 @@
        </div>
     </div>
 
-    <div class=" text-emerald-100 mx-20 ">
+
+   
+    <div class=" text-emerald-100 mx-20 " id="contact">
         <div class="  mt-40 text-3xl text-center font-bold ">
             <p class="uppercase">Contact</p>           
         </div>
