--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="/dist/output.css">
     <script src="https://kit.fontawesome.com/dab3c82309.js" crossorigin="anonymous"></script>
 </head>
-<body class="bg-emerald-600 font-['Poppins']">
-    <div class="flex justify-between py-1   text-emerald-100 " id="home">
-        <div class="text-3xl tracking-tightest ml-20 font-black">ACV</div>
+<body class="bg-gray-800 font-['Poppins']">
+    <div class="flex justify-between py-1   text-gray-800 bg-emerald-100 fixed t-0 r-0 w-full" >
+        <div class="text-3xl tracking-tightest ml-20 font-black ">ACV</div>
         <div class="mr-20 py-2">
             <ul class="flex space-x-10 text-lg font-semibold uppercase">
                 <li><a href="#home">Home</a></li>
@@ -21,11 +21,12 @@
         </div>
     </div>
 
-    <div class="flex  text-emerald-100 " >
+    <div class="flex  text-emerald-100 " id="home" >
         <div class="w-1/2 ml-20  flex flex-col gap-4 mt-72">            
             <p class="text-6xl font-black tracking-wider">Anthony Valdez</p>
             <p class="text-3xl font-bold">Front-End Developer</p>
-            <button class="w-36 p-2  text-emerald-100 border border-solid rounded-full  hover:bg-emerald-100 hover:text-emerald-700 duration-500 "><a href="http://">Send Message</a></button>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio, animi. Necessitatibus tenetur ab rerum adipisci, numquam sed id distinctio repellat?</p>
+            <button class="w-36 p-2  text-emerald-100 border border-solid rounded-full  hover:bg-emerald-100 hover:text-gray-800 duration-500 "><a href="http://">Send Message</a></button>
         </div>
         <div class="w-1/2" >
             <img src="./images/dp.png" alt="image" class="mt-16 bg-contain w-fit rounded-full bg-transparent">
@@ -68,10 +69,10 @@
     </div>
 
 
-   
-    <div class=" text-emerald-100 mx-20 " id="contact">
+   <div id="contact" ></div>
+    <div  class=" text-emerald-100 mx-20 " >
         <div class="  mt-40 text-3xl text-center font-bold ">
-            <p class="uppercase">Contact</p>           
+            <p class="uppercase" >Contact</p>           
         </div>
 
         <div class="flex ">
