--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-800 font-['Poppins']">
     <div class="flex justify-between py-1   text-gray-800 bg-emerald-100 fixed t-0 r-0 w-full" >
-        <div class="text-3xl tracking-tightest ml-20 font-black ">ACV</div>
+        <div class="text-3xl tracking-tightest ml-20 font-black p-1">ACV</div>
         <div class="mr-20 py-2">
             <ul class="flex space-x-10 text-lg font-semibold uppercase">
                 <li><a href="#home">Home</a></li>
