--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Learning Tailwind | Anthony Valdez</title>
+    <title>Portfolio using Tailwind | Anthony Valdez</title>
     <link rel="stylesheet" href="/dist/output.css">
     <script src="https://kit.fontawesome.com/dab3c82309.js" crossorigin="anonymous"></script>
 </head>
