--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
 
 
     <!-- FOOTER -->
-    <div class="mt-40  text-emerald-900 ">
+    <div class="mt-40  text-gray-900 ">
         <div class=" bg-emerald-100 p-10  ">
             <div class="flex justify-center items-center gap-5 ">
               
