remove hover effect

--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,11 @@
             </p>
 
             <div class="mt-8  grid gap-4 grid-cols-3 grid-rows-2 text-center w-1/2 tracking-wider ">
-                <i class="fa-brands fa-html5 text-6xl hover:text-emerald-900 duration-500 "><p class="text-lg">HTML5</p></i>
-                <i class="fa-brands fa-css3-alt text-6xl hover:text-emerald-900 duration-500"><p class="text-lg">CSS3</p></i>
-                <i class="fa-brands fa-square-js text-6xl hover:text-emerald-900 duration-500"><p class="text-lg">JAVASCRIPT</p></i>
-                <i class="fa-brands fa-java text-6xl hover:text-emerald-900 duration-500"><p class="text-lg">JAVA</p></i>
-                <i class="fa-solid fa-database text-6xl hover:text-emerald-900 duration-500"><p class="text-lg">SQL</p></i>
+                <i class="fa-brands fa-html5 text-6xl "><p class="text-lg">HTML5</p></i>
+                <i class="fa-brands fa-css3-alt text-6xl "><p class="text-lg">CSS3</p></i>
+                <i class="fa-brands fa-square-js text-6xl "><p class="text-lg">JAVASCRIPT</p></i>
+                <i class="fa-brands fa-java text-6xl "><p class="text-lg">JAVA</p></i>
+                <i class="fa-solid fa-database text-6xl "><p class="text-lg">SQL</p></i>
             </div>
         </div>
     </div>
